--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,3 +1,6 @@
+@use 'variabili';
+
+
 *{
     padding:0;
     margin:0;
@@ -6,19 +9,45 @@
 
 body{
     font-family: "Lato" , sans-serif;
-    
+    background-image: variabili.$background-color;
     
 }
 section{
     text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    position: absolute;
+    margin:80% auto;
+
 
 }
+@keyframes buttonAnimation {
+    0%{
+        
+        transform: translateY(0)   ;
+    }
+    50%{
+        transform: translateY(-5px) 
+    }
+    100%{
+        transform: translateY(0)  ;
+    }
+}
+
 .button{
     height: 50px;
     width: 100px;
-    background-color: red;
+    border:none;
+    margin: 20px 5px;
+    border-radius: .25rem;
+    background-image:variabili.$background-color-inverse;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1)
+
 }
+
+.button-animation{
+    animation: buttonAnimation .3s ease ;
+}
+
+@media only screen and (min-width:961px){
+        section{
+            margin: 22% auto
+        }
+    }
