Refactoring JavaScript File & Add footer section

--- a/assets/sass/_variabili.scss
+++ b/assets/sass/_variabili.scss
@@ -1,2 +1,3 @@
+// Background gradients
 $background-color : linear-gradient(to right, #4facfe, #00f2fe);
 $background-color-inverse:linear-gradient(to left, #4facfe, #00f2fe)
