--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,17 +14,11 @@ section {
   margin: 80% auto;
 }
 
-@keyframes buttonAnimation {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(-5px);
-  }
-  100% {
-    transform: translateY(0);
-  }
+a {
+  text-decoration: none;
+  color: #e1e1e1;
 }
+
 .button {
   height: 50px;
   width: 100px;
@@ -39,9 +33,30 @@ section {
   animation: buttonAnimation 0.3s ease;
 }
 
+#footer {
+  text-align: center;
+  margin-top: -15%;
+}
+
+@keyframes buttonAnimation {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-5px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
 @media only screen and (min-width: 961px) {
   section {
     margin: 22% auto;
+  }
+}
+@media only screen and (min-height: 568px) and (max-height: 667px) {
+  section {
+    margin: 40% auto;
   }
 }
 
