--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -39,7 +39,7 @@ a{
 // ID Selector
 #footer{
     text-align: center;
-    margin-top: -15%
+    margin-top: -55%
 }
 // Button Animation
 @keyframes buttonAnimation {
@@ -59,9 +59,15 @@ a{
         section{
             margin: 22% auto
         }
+        #footer{
+            margin: -15% auto;
+        }
 }
 @media only screen and (min-height:568px) and (max-height:667px){
     section{
         margin: 40% auto
+    }
+    #footer{
+        margin: -20% auto;
     }
 }
